@@ -1,0 +1,19 @@
+# Generated by Django 2.1.7 on 2019-04-11 19:51
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('courses', '0015_auto_20190411_1951'),
+        ('accounts', '0011_auto_20190404_2028'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='student',
+            name='grades',
+            field=models.ManyToManyField(blank=True, to='courses.Grade'),
+        ),
+    ]
